corrected scrollbar and navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,9 @@
 body {
     @apply bg-black
 }
+
+html {
+    scroll-behavior: smooth;
+    scrollbar-color: #1DDD42 black;
+    scrollbar-width: thin;
+}
